# AgentArena

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AUTHORS  BUILD_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  LICENSE_HEADER  MIXAMO_QUICKSTART.md  NOTICE  PROJECT_STATUS.md  PYTHON_SETUP.md  QUICK_START_GITHUB_CLI.md  README.md  START_CLAUDE.bat  START_IPC_SERVER.bat  START_LOCAL_LLM.bat  TESTING.md  TESTING_AGENT_WITH_GPU.md  TESTING_OBSERVATION_LOOP.md  TODO.md  TROUBLESHOOTING_IPC.md  agent_arena.gdextension  agent_arena.gdextension.uid  clear_godot_cache.ps1  copy_dll.ps1  fix_dll.ps1  project.godot  project_items.json  pyproject.toml  rebuild_clean.ps1  test_apple_import.tscn  test_kenney_apple.tscn
.claude/: project-context.md  settings.json  settings.local.json
.github/: pull_request_template.md
assets/: README.md
configs/: config.yaml  models.yaml
docs/: HUMANOID_VISUAL.md  MIXAMO_ANIMATION_FIX.md  architecture.md  autoload_architecture.md  backlog_items.md  dev_tools.md  foraging_demo_guide.md  framework_integration_strategy.md  getting_3d_assets.md  github_cli_guide.md  github_guide.md  github_issues.md  godot_objective_implementation.md  handoff_to_andrew.md  ipc.md  ipc_protocol.md  issue_60_ldx_refactor_plan.md  ldx_refactor_implementation_summary.md  learner_developer_experience.md  learner_tiers.md  licensing.md  linting_guide.md  llama_cpp_gpu_setup.md  llama_cpp_setup.md  llama_cpp_windows_setup.md  memory.md  memory_architecture.md  memory_system.md  model_management.md  new_architecture.md  objective_schema.md  project_board.md  prompt_inspector.md  prompt_inspector_implementation.md  quickstart.md  quickstart_agent.md  team_onboarding.md  testing_prompt_inspector.md  three_layer_architecture.md  troubleshooting_3d_models.md  (+2 more)
godot/: CMakeLists.txt  agent_arena.gdextension  rebuild.ps1
godot/include/: agent_arena.h  register_types.h
godot/src/: agent_arena.cpp  register_types.cpp
python/: .gdignore  OBSERVE_ENDPOINT.md  README_INSPECTOR_TESTING.md  README_PROMPT_INSPECTOR_DEMO.md  pyproject.toml  requirements-ci.txt  requirements-minimal.txt  requirements.txt  run_foraging_demo.py  run_ipc_server.py  run_ipc_server_with_gpu.py  run_local_llm_forager.py  run_vllm_server.py  test_agent_gpu.py  test_inspector_with_godot.py  test_llama_backend.py  test_llama_gpu.py  test_llama_simple.py  test_ltm_basic.py  test_observe_endpoint.py  test_prompt_inspector_advanced.py  test_prompt_inspector_demo.py  test_quick_gpu.py  test_rag_agent.py  test_rag_v2.py  test_rag_with_llm_simulation.py  test_three_layer_architecture.py
python/agent_runtime/: __init__.py  agent.py  arena.py  behavior.py  local_llm_behavior.py  prompt_inspector.py  reasoning_trace.py  runtime.py  schemas.py  tool_dispatcher.py
python/agent_runtime/memory/: __init__.py  base.py  observation_converter.py  rag.py  rag_v2.py  sliding_window.py  spatial.py  summarizing.py
python/archived/: START_GPU_IPC_SERVER.bat  observe_inspector.py  run_agent.py  test_inspector_with_godot.py  test_prompt_inspector_advanced.py  test_prompt_inspector_demo.py  test_rag_v2.py  test_simple_agent.py  test_spatial_memory.py
python/archived/ipc/: __init__.py  messages.py
python/archived/user_agents_old_framework/: __init__.py
python/archived/user_agents_old_framework/examples/: llm_forager.py  simple_forager.py  simple_forager_simple.py
python/backends/: __init__.py  base.py  llama_cpp_backend.py  vllm_backend.py
python/evals/: __init__.py  eval_agent.py
python/ipc/: __init__.py  converters.py  messages.py  server.py
python/long_term_memory_module/: __init__.py  long_term_memory.py  semantic_memory.py
python/scenarios/: __init__.py  foraging.py  loader.py
python/sdk/: README.md  pyproject.toml
python/sdk/agent_arena_sdk/: __init__.py  arena.py  testing.py
python/sdk/agent_arena_sdk/adapters/: __init__.py  base.py
python/sdk/agent_arena_sdk/memory/: __init__.py  spatial.py
python/sdk/agent_arena_sdk/schemas/: __init__.py  decision.py  objective.py  observation.py  spatial.py  tools.py
python/sdk/agent_arena_sdk/server/: __init__.py  debug_middleware.py  debug_store.py  ipc_server.py  web_ui.py
python/sdk/agent_arena_sdk/server/static/: debug_viewer.html
python/tests/: test_debug_system.py  test_local_llm_behavior.py  test_sdk.py
python/tools/: __init__.py  __main__.py  inspect_agent.py  inspect_memory.py  inspect_prompts.py  inventory.py  model_manager.py  movement.py  navigation.py  observe_inspector.py  world_query.py
python/user_agents/examples/: __init__.py  llm_forager.py  simple_forager.py
scenes/: README_CAPTURE_POINTS.md  agent_visual.tscn  capture_point.tscn  crafting_chain.tscn  foraging.tscn  foraging_player.tscn  mixamo_agent_visual.tscn  simple_humanoid.tscn  team_capture.tscn  test_IPC.tscn  test_arena.gd  test_arena.gd.uid  test_arena.tscn
scripts/: README.md  add_collision_shapes.gd  add_collision_shapes.gd.uid  agent_helper.gd  agent_helper.gd.uid  agent_visual.gd  agent_visual.gd.uid  base_agent.gd  base_agent.gd.uid  base_scene_controller.gd  base_scene_controller.gd.uid  capture_point.gd  capture_point.gd.uid  crafting_chain.gd  crafting_chain.gd.uid  foraging.gd  foraging.gd.uid  init_github.bat  init_github.sh  mixamo_agent_visual.gd  mixamo_agent_visual.gd.uid  observation_debugger.gd  observation_debugger.gd.uid  player_controlled_agent.gd  player_controlled_agent.gd.uid  setup.bat  setup.sh  setup_godot_cpp.bat  setup_godot_cpp.sh  simple_agent.gd  simple_agent.gd.uid  team_capture.gd  team_capture.gd.uid  test_arena.gd  test_arena.gd.uid  visibility_tracker.gd  visibility_tracker.gd.uid
starters/: README.md
tests/: test_adapter_base.py  test_agent.py  test_anthropic_adapter.py  test_arena.py  test_behavior.py  test_crafting.py  test_langgraph_adapter.py  test_local_llm_behavior.py  test_long_term_memory.py  test_memory.py  test_model_manager.py  test_prompt_inspector.py  test_reasoning_trace.py  test_schemas.py  test_spatial_memory.py  test_starters_crafting.py  test_starters_foraging.py  test_vllm_backend.py  (+1 more)
(+140 files in other folders)
