[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-arena"
version = "0.1.0"
description = "LLM-driven autonomous agent benchmarking framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Andrew Madison"},
    {name = "Justin Madison"},
]
keywords = ["ai", "agents", "llm", "benchmark", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "msgpack>=1.0.5",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "structlog>=23.2.0",
    "python-json-logger>=2.0.7",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
llm = [
    "llama-cpp-python>=0.2.0",
    "openai>=1.0.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
]

vector = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.5.0",
]

full = [
    "agent-arena[llm,vector]",
    "pillow>=10.0.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/JustInternetAI/AgentArena"
Repository = "https://github.com/JustInternetAI/AgentArena"
Issues = "https://github.com/JustInternetAI/AgentArena/issues"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=agent_runtime",
    "--cov=backends",
    "--cov=tools",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
