[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-arena"
version = "0.1.0"
description = "LLM-driven multi-agent simulation framework for Godot"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "llm", "agents", "simulation", "godot", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment :: Simulation",
]

dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "msgpack>=1.0.5",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
llm = [
    "llama-cpp-python>=0.2.0",
    "openai>=1.0.0",
    "transformers>=4.35.0",
]
ml = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
]
vector = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/JustInternetAI/AgentArena"
Repository = "https://github.com/JustInternetAI/AgentArena"
Documentation = "https://agent-arena.readthedocs.io"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_runtime*", "memory*", "tools*", "evals*", "backends*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=agent_runtime --cov=memory --cov=tools --cov=evals --cov=backends"
